--- a/src/app/master/application/application/application.component.html
+++ b/src/app/master/application/application/application.component.html
@@ -1,3 +1,6 @@
-<p>
-  application works!
-</p>
+<md-toolbar>Applications</md-toolbar>
+<button md-fab [routerLink]="['/master/application/new']" class="fab" routerLinkActive="active">
+    <md-icon class="md-24">add</md-icon>
+</button>
+<router-outlet name="details"></router-outlet>
+<router-outlet></router-outlet>
