--- a/src/app/report/report-actual/report-actual.component.html
+++ b/src/app/report/report-actual/report-actual.component.html
@@ -1,13 +1,2 @@
-<bar-vertical [view]="view"
-    [scheme]="colorScheme"
-    [results]="data"
-    [gradient]="gradient"
-    [xAxis]="showXAxis"
-    [yAxis]="showYAxis"
-    [legend]="showLegend"
-    [showXAxisLabel]="showXAxisLabel"
-    [showYAxisLabel]="showYAxisLabel"
-    [xAxisLabel]="xAxisLabel"
-    [yAxisLabel]="yAxisLabel"
-    (select)="onSelect($event)">
-</bar-vertical>
+<pie-chart [view]="view" [scheme]="colorScheme" [results]="single" [legend]="showLegend" [explodeSlices]="explodeSlices" [labels]="showLabels" [doughnut]="doughnut" [gradient]="gradient" >
+</pie-chart>
