--- a/src/app/master/application/application-detail/application-detail.component.html
+++ b/src/app/master/application/application-detail/application-detail.component.html
@@ -1,15 +1,21 @@
 <md-card class="app-card-content">
     <md-card-title *ngIf="id">Application #{{id}}</md-card-title>
     <md-card-title *ngIf="!id">New Application</md-card-title>
-    <form (ngSubmit)="onSubmit()">
-        <md-card-content>
-        </md-card-content>
-        <md-card-actions align="end">
-            <button md-button type="button" color="warn" *ngIf="id" (click)="doDelete()">Delete</button>
-            <button md-button type="button" (click)="doReset()" [disabled]="true">Reset</button>
-            <button md-button type="button" (click)="doCancel()">Cancel</button>
-            <button md-raised-button color="primary" style="submit" [disabled]="!true">Save</button>
-        </md-card-actions>
-        <div *ngIf="pleaseSave">Please save or cancel</div>
-    </form>
+    <md-card-content>
+        <form (ngSubmit)="onSubmit()" [formGroup]="form">
+            <md-input-container class="example-full-width">
+                <input mdInput type="text" placeholder="Nombre" formControlName="name" maxlength="50">
+            </md-input-container>
+            <md-input-container class="example-full-width">
+                <textarea mdInput type="area" placeholder="Descripcion" formControlName="description" rows="4" maxlength="150"></textarea>
+            </md-input-container>
+        </form>
+    </md-card-content>
+    <md-card-actions align="end">
+        <button md-button type="button" color="warn" *ngIf="id" (click)="doDelete()">Delete</button>
+        <button md-button type="button" (click)="doReset()" [disabled]="!form.status">Reset</button>
+        <button md-button type="button" (click)="doCancel()">Cancel</button>
+        <button md-raised-button color="primary" style="submit" [disabled]="!form.valid">Save</button>
+    </md-card-actions>
+    <div *ngIf="pleaseSave">Please save or cancel</div>
 </md-card>
