--- a/src/app/user/user-list-result/user-list-result.component.html
+++ b/src/app/user/user-list-result/user-list-result.component.html
@@ -1,3 +1,24 @@
-<p>
-  user-list-result works!
-</p>
+<md-card class="app-card-content">
+    <md-card-title>New Administrator</md-card-title>
+    <md-card-content>
+        <form (ngSubmit)="onSubmit()" [formGroup]="form">
+            <md-input-container class="example-full-width">
+                <input mdInput type="search" placeholder="Nombre" formControlName="name" maxlength="50">
+            </md-input-container>
+            <button md-mini-fab type="button" (click)="search()" [disabled]="!form.valid" color="primary">
+                <md-icon>search</md-icon>
+            </button>
+        </form>
+        <md-nav-list>
+            <md-list-item *ngFor="let user of usersResult">
+                <h3 md-line>{{user.Name}}</h3>
+                <button md-mini-fab type="button" (click)="addUserAdministratir(user)">
+                    <md-icon>add</md-icon>
+                </button>
+            </md-list-item>
+        </md-nav-list>
+    </md-card-content>
+    <md-card-actions align="end">
+        <button md-raised-button type="button" (click)="doCancel()">Cancel</button>
+    </md-card-actions>
+</md-card>
