--- a/src/app/user/user-list-admin/user-list-admin.component.html
+++ b/src/app/user/user-list-admin/user-list-admin.component.html
@@ -1,3 +1,12 @@
-<p>
-  user-list-admin works!
-</p>
+<md-card class="app-card-content">
+    <md-card-content>
+        <md-nav-list>
+            <md-list-item *ngFor="let user of usersAdministratos">
+                <h3 md-line>{{user.Name}}</h3>
+                <button md-mini-fab type="button" (click)="delete()" color="warn">
+                    <md-icon>clear</md-icon>
+                </button>
+            </md-list-item>
+        </md-nav-list>
+    </md-card-content>
+</md-card>
