--- a/src/app/user/user/user.component.html
+++ b/src/app/user/user/user.component.html
@@ -1,3 +1,6 @@
-<p>
-  user works!
-</p>
+<md-toolbar>Administrators</md-toolbar>
+<button md-fab [routerLink]="['/user/admin/new']" class="fab" routerLinkActive="active">
+    <md-icon class="md-24">add</md-icon>
+</button>
+<router-outlet name="results"></router-outlet>
+<router-outlet></router-outlet>
