--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
             (click)="sidenav.toggle()">
             <md-icon>menu</md-icon>
         </button>
-        Monitor
+        {{'app.title' | translate}}
     </md-toolbar>
 
     <div class="app-content">
