--- a/src/app/master/application/application/application.component.html
+++ b/src/app/master/application/application/application.component.html
@@ -1,4 +1,4 @@
-<md-toolbar>Applications</md-toolbar>
+<md-toolbar>{{'app.master.application.title' | translate}}</md-toolbar>
 <button md-fab [routerLink]="['/master/application/new']" class="fab" routerLinkActive="active">
     <md-icon class="md-24">add</md-icon>
 </button>
