--- a/src/app/user/user/user.component.html
+++ b/src/app/user/user/user.component.html
@@ -1,4 +1,4 @@
-<md-toolbar>Administrators</md-toolbar>
+<md-toolbar>{{'app.user.title'|translate}}</md-toolbar>
 <button md-fab [routerLink]="['/user/admin/new']" class="fab" routerLinkActive="active">
     <md-icon class="md-24">add</md-icon>
 </button>
