--- a/src/app/report/report-history/report-history.component.html
+++ b/src/app/report/report-history/report-history.component.html
@@ -1,14 +1,9 @@
-    <bar-vertical
-      [view]="view"
-      [scheme]="colorScheme"
-      [results]="data"
-      [gradient]="gradient"
-      [xAxis]="showXAxis"
-      [yAxis]="showYAxis"
-      [legend]="showLegend"
-      [showXAxisLabel]="showXAxisLabel"
-      [showYAxisLabel]="showYAxisLabel"
-      [xAxisLabel]="xAxisLabel"
-      [yAxisLabel]="yAxisLabel"
-      (select)="onSelect($event)">
-    </bar-vertical>
+<md-card class="app-card-content">
+    <md-card-title>{{'app.report.history.title' | translate}}</md-card-title>
+    <md-card-content>
+        <bar-vertical [view]="view" [scheme]="colorScheme" [results]="data" [gradient]="gradient" [xAxis]="showXAxis" [yAxis]="showYAxis" [legend]="showLegend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel" (select)="onSelect($event)">
+        </bar-vertical>
+    </md-card-content>
+    <md-card-actions align="end">
+    </md-card-actions>
+</md-card>
