--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,34 @@
 <md-sidenav-container fullscreen>
-    <md-sidenav #sidenav
-        mode="side">
+    <md-sidenav #sidenav mode="side">
         <md-nav-list class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
-            <a md-list-item
-                *ngFor="let view of views"
-                (click)="goTo(view.link)">
+            <a md-list-item *ngFor="let view of views" (click)="goTo(view.link)">
                 <md-icon md-list-icon>{{view.icon}}</md-icon>
                 <span md-line>{{view.name}}</span>
-                <span md-line
-                    class="secondary">{{view.description}}</span>
+                <span md-line class="secondary">{{view.description}}</span>
             </a>
         </md-nav-list>
     </md-sidenav>
-
     <md-toolbar color="primary">
-        <button md-icon-button
-            (click)="sidenav.toggle()">
+        <button md-icon-button (click)="sidenav.toggle()">
             <md-icon>menu</md-icon>
         </button>
         {{'app.title' | translate}}
+        <span class="example-spacer"></span>
+        <button md-icon-button [mdMenuTriggerFor]="menu">
+            <md-icon>language</md-icon>
+        </button>
+        <md-menu #menu="mdMenu">
+            <button md-menu-item (click)="changeLanguage('es')">
+                <md-icon>dialpad</md-icon>
+                <span>{{'app.language.spanish'| translate}}</span>
+            </button>
+            <button md-menu-item (click)="changeLanguage('en')">
+                <md-icon>voicemail</md-icon>
+                <span>{{'app.language.english' | translate}}</span>
+            </button>
+        </md-menu>
+        
     </md-toolbar>
-
     <div class="app-content">
         <router-outlet></router-outlet>
     </div>
