change report page

--- a/src/app/report/report/report.component.html
+++ b/src/app/report/report/report.component.html
@@ -1,2 +1,24 @@
 <app-report-actual></app-report-actual>
 <app-report-history></app-report-history>
+<!--<md-tab-group >
+    <md-tab >
+        <template md-tab-label>
+            Todo
+        </template>
+        <app-report-actual></app-report-actual>
+        <app-report-history></app-report-history>
+    </md-tab>
+    <md-tab>
+        <template md-tab-label>
+            Actual
+        </template>
+        <app-report-actual></app-report-actual>
+    </md-tab>
+    <md-tab>
+        <template md-tab-label>
+            Historico
+        </template>
+        <app-report-history></app-report-history>
+    </md-tab>
+</md-tab-group>
+-->
