--- a/src/app/report/report-actual/report-actual.component.html
+++ b/src/app/report/report-actual/report-actual.component.html
@@ -1,8 +1,10 @@
 <md-card class="app-card-content">
     <md-card-title>{{'app.report.actual.title' | translate}}</md-card-title>
     <md-card-content>
-        <pie-chart [view]="view" [scheme]="colorScheme" [results]="single" [legend]="showLegend" [explodeSlices]="explodeSlices" [labels]="showLabels" [doughnut]="doughnut" [gradient]="gradient">
-        </pie-chart>
+        <div style="text-align: center">
+            <pie-chart [view]="view" [scheme]="colorScheme" [results]="single" [legend]="showLegend" [explodeSlices]="explodeSlices" [labels]="showLabels" [doughnut]="doughnut" [gradient]="gradient">
+            </pie-chart>
+        </div>
     </md-card-content>
     <md-card-actions align="end">
     </md-card-actions>
