--- a/src/app/report/report-actual/report-actual.component.html
+++ b/src/app/report/report-actual/report-actual.component.html
@@ -1,9 +1,13 @@
 <md-card class="app-card-content">
     <md-card-title>{{'app.report.actual.title' | translate}}</md-card-title>
+    <md-divider></md-divider>
     <md-card-content>
-        <div style="text-align: center">
-            <pie-chart [view]="view" [scheme]="colorScheme" [results]="single" [legend]="showLegend" [explodeSlices]="explodeSlices" [labels]="showLabels" [doughnut]="doughnut" [gradient]="gradient">
-            </pie-chart>
+        <div style="display: block">
+            <div style="text-align: center">
+                <div style="display: block">
+                    <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)" [colors]="lineChartColors"></canvas>
+                </div>
+            </div>
         </div>
     </md-card-content>
     <md-card-actions align="end">
