--- a/src/app/report/report/report.component.html
+++ b/src/app/report/report/report.component.html
@@ -1,24 +1,20 @@
-<app-report-actual></app-report-actual>
-<app-report-history></app-report-history>
-<!--<md-tab-group >
-    <md-tab >
-        <template md-tab-label>
-            Todo
-        </template>
-        <app-report-actual></app-report-actual>
-        <app-report-history></app-report-history>
-    </md-tab>
-    <md-tab>
-        <template md-tab-label>
-            Actual
-        </template>
-        <app-report-actual></app-report-actual>
-    </md-tab>
-    <md-tab>
-        <template md-tab-label>
-            Historico
-        </template>
-        <app-report-history></app-report-history>
-    </md-tab>
-</md-tab-group>
--->
+<div class="card-container">
+    <md-card class="actual">
+        <md-card-title>{{'app.report.actual.title' | translate}}</md-card-title>
+        <md-divider></md-divider>
+        <md-card-content>
+            <app-report-actual></app-report-actual>
+        </md-card-content>
+        <md-card-actions align="end">
+        </md-card-actions>
+    </md-card>
+    <md-card class="history">
+        <md-card-title>{{'app.report.history.title' | translate}}</md-card-title>
+        <md-divider></md-divider>
+        <md-card-content>
+            <app-report-history></app-report-history>
+        </md-card-content>
+        <md-card-actions align="end">
+        </md-card-actions>
+    </md-card>
+</div>
