--- a/src/app/master/application/application-detail/application-detail.component.scss
+++ b/src/app/master/application/application-detail/application-detail.component.scss
@@ -1,3 +1,10 @@
-.app-card-content {
- margin: 16px;
- }
+.card-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+md-card {
+    box-sizing: border-box;
+    margin: 12px;
+}
