--- a/src/app/master/application/application-list/application-list.component.html
+++ b/src/app/master/application/application-list/application-list.component.html
@@ -1,11 +1,15 @@
 <md-card class="app-card-content">
     <md-card-content>
         <md-nav-list>
-            <md-list-item *ngFor="let application of applications" >
-                <h3 md-line [class.edited]="application.Id == (editid | async)" routerLinkActive="active" [routerLink]="[ '/master/application',application.Id ]">{{application.Name}}</h3>
-                <button md-mini-fab type="button" (click)="delete(application)" color="warn">
-                    <md-icon>clear</md-icon>
-                </button>
+            <md-list-item *ngFor="let application of applications">
+                <h3 md-line
+                    [class.edited]="application.Id == (editid | async)"
+                    routerLinkActive="active"
+                    [routerLink]="[ '/master/application',application.Id ]">{{application.Name}}</h3>
+                <md-icon (click)="delete(application)"
+                    class="delete"
+                    mdTooltip="{{'app.master.application.tooltipDelete' | translate}}"
+                    [mdTooltipPosition]="'above'">delete</md-icon>
             </md-list-item>
         </md-nav-list>
     </md-card-content>
