--- a/src/app/user/user-list-admin/user-list-admin.component.html
+++ b/src/app/user/user-list-admin/user-list-admin.component.html
@@ -3,9 +3,9 @@
         <md-nav-list>
             <md-list-item *ngFor="let user of usersAdministratos">
                 <h3 md-line>{{user.Name}}</h3>
-                <button md-mini-fab type="button" (click)="delete(user)" color="warn">
-                    <md-icon>clear</md-icon>
-                </button>
+                <md-icon (click)="deleteUser(user)" class="delete"
+                    mdTooltip="{{'app.user.deleteTooltip' | translate}}"
+                    [mdTooltipPosition]="'above'">delete</md-icon>
             </md-list-item>
         </md-nav-list>
     </md-card-content>
