--- a/src/app/user/user-list-result/user-list-result.component.scss
+++ b/src/app/user/user-list-result/user-list-result.component.scss
@@ -1,7 +1,4 @@
-.app-card-content {
-  margin: 16px;
-}
-
-.app-form {
-  margin: 15px;
+md-card {
+    box-sizing: border-box;
+    margin: 12px;
 }
