--- a/src/app/user/user/user.component.html
+++ b/src/app/user/user/user.component.html
@@ -1,6 +1,15 @@
 <md-toolbar>{{'app.user.title'|translate}}</md-toolbar>
-<button md-fab [routerLink]="['/user/admin/new']" class="fab" routerLinkActive="active">
+<button md-fab
+    [routerLink]="['/user/admin/new']"
+    class="fab"
+    routerLinkActive="active">
     <md-icon class="md-24">add</md-icon>
 </button>
-<router-outlet name="results"></router-outlet>
-<router-outlet></router-outlet>
+<div class="admin_container">
+    <div class="component">
+        <router-outlet></router-outlet>
+    </div>
+    <div class="component">
+        <router-outlet name="results"></router-outlet>
+    </div>
+</div>
