--- a/src/app/user/user/user.component.scss
+++ b/src/app/user/user/user.component.scss
@@ -1,7 +1,21 @@
 [md-fab] {
-  position: absolute;
-  right: 3%;
-  top: 96px;
-  z-index: 1;
+    position: absolute;
+    right: 3%;
+    top: 96px;
+    z-index: 1;
 }
-[md-fab].active { display: none; }
+
+[md-fab].active {
+    display: none;
+}
+
+.admin_container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+.component {
+    flex: 1 1 calc(50% - 30px);
+    padding:10px;
+}
