--- a/src/app/master/application/application-detail/application-detail.component.html
+++ b/src/app/master/application/application-detail/application-detail.component.html
@@ -3,19 +3,39 @@
     <md-card-title *ngIf="!id">{{'app.master.application.new' | translate}}</md-card-title>
     <md-divider></md-divider>
     <md-card-content>
-        <form (ngSubmit)="onSubmit()" [formGroup]="form" flex-layout>
+        <form (ngSubmit)="onSubmit()"
+            [formGroup]="form"
+            flex-layout>
             <md-input-container class="example-full-width">
-                <input mdInput type="text" placeholder="Nombre" formControlName="name" maxlength="50">
+                <input mdInput
+                    type="text"
+                    placeholder="Nombre"
+                    formControlName="name"
+                    maxlength="50">
             </md-input-container>
+
             <md-input-container class="example-full-width">
-                <textarea mdInput type="area" placeholder="Descripcion" formControlName="description" rows="4" maxlength="150"></textarea>
+                <textarea mdInput
+                    type="area"
+                    placeholder="Descripcion"
+                    formControlName="description"
+                    rows="4"
+                    maxlength="150"></textarea>
             </md-input-container>
         </form>
     </md-card-content>
     <md-card-actions align="end">
-        <button md-button type="button" (click)="doReset()" [disabled]="!form.status">{{'app.common.reset' | translate}}</button>
-        <button md-button type="button" (click)="doCancel()">{{'app.common.cancel' | translate}}</button>
-        <button md-raised-button color="primary" style="submit" [disabled]="!form.valid">{{'app.common.save' | translate}}</button>
+        <button md-button
+            type="button"
+            (click)="doReset()"
+            [disabled]="!form.status">{{'app.common.reset' | translate}}</button>
+        <button md-button
+            type="button"
+            (click)="doCancel()">{{'app.common.cancel' | translate}}</button>
+        <button md-raised-button
+            color="primary"
+            style="submit"
+            [disabled]="!form.valid">{{'app.common.save' | translate}}</button>
     </md-card-actions>
     <div *ngIf="pleaseSave">Please save or cancel</div>
 </md-card>
