--- a/src/app/retry/admin-retry/admin-retry.component.html
+++ b/src/app/retry/admin-retry/admin-retry.component.html
@@ -1,3 +1,65 @@
-<p>
-  admin-retry works!
-</p>
+<div class="card-container">
+    <md-card class="search">
+        <md-card-title>{{'app.retry.filter' | translate}}</md-card-title>
+        <md-divider></md-divider>
+        <md-card-content>
+            <form (ngSubmit)="onSubmit()"
+                [formGroup]="form" class="form_container">
+                <md-select placeholder="{{'app.retry.applications' | translate}}" class="item">
+                    <md-option *ngFor="let application of applications"
+                        [value]="application.Id">{{ application.Name }} formControlName="application"</md-option>
+                </md-select>
+                <md-select placeholder="{{'app.retry.services' | translate}}" class="item">
+                    <md-option *ngFor="let service of services"
+                        [value]="service.Id">{{ service.Name }} formControlName="service"
+                    </md-option>
+                </md-select>
+                <md-input-container class="item">
+                    <input mdInput
+                        type="text"
+                        placeholder="{{'app.retry.consumer' | translate}}"
+                        formControlName="consumer"
+                        maxlength="50">
+                </md-input-container>
+                <md-input-container class="item">
+                    <input mdInput
+                        type="number"
+                        placeholder="{{'app.retry.message' | translate}}"
+                        formControlName="messageId"
+                        maxlength="10">
+                </md-input-container>
+                <md-input-container class="item">
+                    <input mdInput
+                        type="date"
+                        placeholder="{{'app.retry.initialDate' | translate}}"
+                        formControlName="initialDate">
+                </md-input-container>
+                <md-input-container class="item">
+                    <input mdInput
+                        type="date"
+                        placeholder="{{'app.retry.finalDate' | translate}}"
+                        formControlName="finalDate">
+                </md-input-container>
+            </form>
+        </md-card-content>
+        <md-card-actions align="end">
+            <button md-mini-fab
+                type="button"
+                (click)="search()"
+                [disabled]="!form.valid"
+                color="primary"
+                mdTooltip="{{'app.common.search' | translate}}">
+                <md-icon>search</md-icon>
+            </button>
+        </md-card-actions>
+    </md-card>
+    <md-card class="result" *ngIf="services.length >0">
+        <md-card-title>{{'app.retry.result' | translate}}</md-card-title>
+        <md-divider></md-divider>
+        <md-card-content>
+
+        </md-card-content>
+        <md-card-actions align="end">
+        </md-card-actions>
+    </md-card>
+</div>
