add grid transactions and pagination

--- a/src/app/master/application/application-detail/application-detail.component.html
+++ b/src/app/master/application/application-detail/application-detail.component.html
@@ -4,8 +4,7 @@
     <md-divider></md-divider>
     <md-card-content>
         <form (ngSubmit)="onSubmit()"
-            [formGroup]="form"
-            flex-layout>
+            [formGroup]="form">
             <md-input-container class="example-full-width">
                 <input mdInput
                     type="text"
