--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,28 +3,28 @@
         mode="over">
         <md-nav-list class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
             <a md-list-item
-                (click)="goTo('user/admin')">
+                (click)="sidenav.close(); goTo('user/admin')">
                 <md-icon md-list-icon>people</md-icon>
                 <span md-line>{{'app.sideNav.user.title' | translate}}</span>
                 <span md-line
                     class="secondary">{{'app.sideNav.user.description' | translate}}</span>
             </a>
             <a md-list-item
-                (click)="goTo('master/application')">
+                (click)="sidenav.close(); goTo('master/application')">
                 <md-icon md-list-icon>apps</md-icon>
                 <span md-line>{{'app.sideNav.application.title' | translate}}</span>
                 <span md-line
                     class="secondary">{{'app.sideNav.application.description' | translate}}</span>
             </a>
             <a md-list-item
-                (click)="goTo('report/history')">
+                (click)="sidenav.close(); goTo('report/history')">
                 <md-icon md-list-icon>poll</md-icon>
                 <span md-line>{{'app.sideNav.report.title' | translate}}</span>
                 <span md-line
                     class="secondary">{{'app.sideNav.report.description' | translate}}</span>
             </a>
             <a md-list-item
-                (click)="goTo('retry')">
+                (click)="sidenav.close(); goTo('retry')">
                 <md-icon md-list-icon>call_missed_outgoing
                 </md-icon>
                 <span md-line>{{'app.sideNav.retry.title' | translate}}</span>
