--- a/src/app/master/application/application-detail/application-detail.component.html
+++ b/src/app/master/application/application-detail/application-detail.component.html
@@ -11,16 +11,38 @@
                     placeholder="Nombre"
                     formControlName="name"
                     maxlength="50">
+                <md-hint>
+                    <span>This doesn't appear to be a valid email address.</span>
+                    <span>Email address is required.</span>
+                </md-hint>
             </md-input-container>
 
-            <md-input-container class="example-full-width">
-                <textarea mdInput
-                    type="area"
-                    placeholder="Descripcion"
-                    formControlName="description"
-                    rows="4"
-                    maxlength="150"></textarea>
-            </md-input-container>
+            <md-card>
+                <md-card-title>
+                    {{'app.master.application.services' | translate}}
+                </md-card-title>
+                <md-divider></md-divider>
+                <md-card-content>
+                    <md-input-container class="example-full-width">
+                        <input mdInput
+                            formControlName="serviceName"
+                            type="text"
+                            placeholder="{{'app.master.application.nameService' | translate}}"
+                            maxlength="50">
+                    </md-input-container>
+                    <button md-mini-fab
+                        type="button"
+                        (click)="addService(form.value.serviceName)"
+                        [disabled]="form.value.serviceName==''"
+                        color="primary"
+                        [mdTooltipPosition]="'right'"
+                        mdTooltip="{{'app.master.application.addService' | translate}}">
+                        <md-icon>add</md-icon>
+                    </button>
+                    <app-service-list *ngIf="initialdata"
+                        [services]="initialdata.Services"></app-service-list>
+                </md-card-content>
+            </md-card>
         </form>
     </md-card-content>
     <md-card-actions align="end">
