--- a/src/app/master/application/application-list/application-list.component.html
+++ b/src/app/master/application/application-list/application-list.component.html
@@ -1,6 +1,6 @@
 <md-card class="app-card-content">
     <md-card-content>
-        <md-nav-list>
+        <md-list>
             <md-list-item *ngFor="let application of applications">
                 <h3 md-line
                     [class.edited]="application.Id == (editid | async)"
@@ -11,6 +11,6 @@
                     mdTooltip="{{'app.master.application.tooltipDelete' | translate}}"
                     [mdTooltipPosition]="'above'">delete</md-icon>
             </md-list-item>
-        </md-nav-list>
+        </md-list>
     </md-card-content>
 </md-card>
