--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import '~@angular/material/theming';
-
 @include mat-core();
 $candy-app-primary: mat-palette($mat-indigo);
-
 md-icon.delete:hover {
     color: red;
 }
 
 md-icon.add:hover {
     color: yellow;
+}
+
+md-icon.refresh:hover {
+    color: green;
+}
+
+md-icon.retry:hover {
+    color: blue;
 }
