connect to real service

--- a/src/app/master/application/application-detail/application-detail.component.html
+++ b/src/app/master/application/application-detail/application-detail.component.html
@@ -1,6 +1,6 @@
 <md-card>
-    <md-card-title *ngIf="id">{{'app.master.application.application' | translate}} #{{id}}</md-card-title>
-    <md-card-title *ngIf="!id">{{'app.master.application.new' | translate}}</md-card-title>
+    <md-card-title *ngIf="initialdata">{{'app.master.application.application' | translate}} {{initialdata.name}}</md-card-title>
+    <md-card-title *ngIf="!initialdata">{{'app.master.application.new' | translate}}</md-card-title>
     <md-divider></md-divider>
     <md-card-content>
         <form (ngSubmit)="onSubmit()"
@@ -11,10 +11,6 @@
                     placeholder="Nombre"
                     formControlName="name"
                     maxlength="50">
-                <md-hint>
-                    <span>This doesn't appear to be a valid email address.</span>
-                    <span>Email address is required.</span>
-                </md-hint>
             </md-input-container>
 
             <md-card>
@@ -40,7 +36,8 @@
                         <md-icon>add</md-icon>
                     </button>
                     <app-service-list *ngIf="initialdata"
-                        [services]="initialdata.Services"></app-service-list>
+                        [services]="initialdata.services">
+                    </app-service-list>
                 </md-card-content>
             </md-card>
         </form>
@@ -56,6 +53,7 @@
         <button md-raised-button
             color="primary"
             style="submit"
+            (click)="onSubmit()"
             [disabled]="!form.valid">{{'app.common.save' | translate}}</button>
     </md-card-actions>
     <div *ngIf="pleaseSave">Please save or cancel</div>
