--- a/src/app/master/service/service-list/service-list.component.html
+++ b/src/app/master/service/service-list/service-list.component.html
@@ -1,6 +1,6 @@
 <md-list>
     <md-list-item *ngFor="let service of services">
-        <h3 md-line>{{service.Name}}</h3>
+        <h3 md-line>{{service.name}}</h3>
         <md-icon (click)="deleteService(user)"
             class="delete"
             mdTooltip="{{'app.master.service.deleteTooltip' | translate}}"
