--- a/src/app/retry/admin-retry/admin-retry.component.html
+++ b/src/app/retry/admin-retry/admin-retry.component.html
@@ -7,25 +7,27 @@
                 [formGroup]="form">
                 <md-select placeholder="{{'app.retry.applications' | translate}}"
                     class="item"
+                    (change)="onSelectApplication($event.value)"
+                    [(ngModel)]="selectedApplication"
                     formControlName="application">
                     <md-option *ngFor="let application of applications"
-                        [value]="application.Id">{{ application.Name }}</md-option>
+                        [value]="application.id">{{ application.name }}</md-option>
                 </md-select>
                 <md-select placeholder="{{'app.retry.services' | translate}}"
                     class="item"
                     formControlName="serviceControl">
                     <md-option *ngFor="let service of services"
-                        [value]="service.Id">{{ service.Name }}
+                        [value]="service.id">{{ service.name }}
                     </md-option>
                 </md-select>
-                <md-input-container class="item">
-                    <input mdInput
-                        type="text"
-                        placeholder="{{'app.retry.consumer' | translate}}"
-                        formControlName="consumer"
-                        maxlength="50">
-                </md-input-container>
-                <md-input-container class="item">
+                <md-select placeholder="{{'app.retry.consumer' | translate}}"
+                    class="item"
+                    formControlName="consumer">
+                    <md-option *ngFor="let consumer of consumers"
+                        [value]="consumer">{{ consumer }}
+                    </md-option>
+                </md-select
+>                <md-input-container class="item">
                     <input mdInput
                         type="number"
                         placeholder="{{'app.retry.message' | translate}}"
@@ -66,18 +68,18 @@
                 <p-column expander="true"
                     [style]="{'width':'40px'}"
                     styleClass="col-icon"></p-column>
-                <p-column field="ApplicationId"
-                    header="{{'app.retry.results.application' | translate}}"></p-column>
-                <p-column field="ServiceId"
-                    header="{{'app.retry.results.service' | translate}}"></p-column>
-                <p-column field="Consumer"
-                    header="{{'app.retry.results.consumer' | translate}}"></p-column>
-                <p-column field="MessageId"
+                <p-column field="id"
+                    header="{{'app.retry.results.transaction' | translate}}"></p-column>
+                <p-column field="msgId"
                     header="{{'app.retry.results.messageId' | translate}}"></p-column>
-                <p-column field="InitialDate"
+                <p-column field="start"
                     header="{{'app.retry.results.initialDate' | translate}}"></p-column>
-                <p-column field="FinalDate"
+                <p-column field="end"
                     header="{{'app.retry.results.finalDate' | translate}}"></p-column>
+                <p-column field="errorType"
+                    header="{{'app.retry.results.errorType' | translate}}"></p-column>
+                <p-column field="errorMessage"
+                    header="{{'app.retry.results.error' | translate}}"></p-column>
                 <p-column styleClass="col-button"
                     [style]="{'width':'40px'}">
                     <ng-template pTemplate="header">
